@@ -1,18 +1,20 @@
 package emulator;
 
-import club.minnced.discord.rpc.DiscordEventHandlers;
-import club.minnced.discord.rpc.DiscordRPC;
-import club.minnced.discord.rpc.DiscordRichPresence;
-import com.github.sarxos.webcam.Webcam;
 import com.nttdocomo.ui.maker.IApplicationMIDlet;
 import emulator.custom.CustomClassLoader;
 import emulator.custom.CustomMethod;
+import emulator.custom.ResourceManager;
 import emulator.graphics3D.IGraphics3D;
 import emulator.media.EmulatorMIDI;
-import emulator.media.MMFPlayer;
+import emulator.media.mmf.MMFPlayer;
 import emulator.ui.IEmulatorFrontend;
+import emulator.ui.RichPresence;
 import emulator.ui.bridge.BridgeFrontend;
+import emulator.ui.swt.EmulatorScreen;
+import emulator.ui.swt.Property;
+import emulator.ui.swt.ResizeMethod;
 import emulator.ui.swt.SWTFrontend;
+import emulator.ui.swt.devutils.idea.IdeaUtils;
 import org.apache.tools.zip.ZipEntry;
 import org.apache.tools.zip.ZipFile;
 
@@ -20,7 +22,6 @@ import javax.microedition.io.ConnectionNotFoundException;
 import javax.microedition.lcdui.Canvas;
 import javax.microedition.lcdui.Display;
 import javax.microedition.lcdui.Screen;
-import javax.microedition.media.Manager;
 import javax.microedition.midlet.MIDlet;
 import javax.swing.*;
 import java.awt.*;
@@ -31,16 +32,15 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.security.MessageDigest;
 import java.util.*;
 import java.util.jar.Attributes;
 import java.util.jar.Manifest;
 
 public class Emulator implements Runnable {
 	public static boolean debugBuild = true;
-	public static String version = "2.19.2";
+	public static String version = "2.21.4";
 	public static String revision = "";
-	public static final int numericVersion = 32;
+	public static final int numericVersion = 38;
 
 	private static IEmulatorFrontend emulatorimpl;
 	private static MIDlet midlet;
@@ -50,33 +50,17 @@ public class Emulator implements Runnable {
 	private static KeyRecords record;
 	public static Vector jarLibrarys;
 	public static Vector<String> jarClasses;
-	public static String midletJar;
+	public static String midletJarPath;
 	public static String midletClassName;
 	public static String classPath;
 	public static String jadPath;
-	public static String deviceName;
-	public static String deviceFile;
 	public static String[] commandLineArguments;
 	public static emulator.custom.CustomClassLoader customClassLoader;
 	public static String iconPath;
 
-	protected static Object rpc;
-	private static Thread rpcCallbackThread;
-	public static long rpcStartTimestamp;
-	public static long rpcEndTimestamp;
-	public static String rpcState;
-	public static String rpcDetails;
-	public static int rpcPartySize;
-	public static int rpcPartyMax;
-
 	public static String httpUserAgent;
 	private final static Thread backgroundThread;
-	private static IEmulatorPlatform platform;
-
-	public static final String os = System.getProperty("os.name").toLowerCase();
-	public static final boolean win = os.startsWith("win");
-	public static final boolean linux = os.contains("linux") || os.contains("nix");
-	public static final boolean macos = os.startsWith("darwin") || os.startsWith("mac os");
+	public static IEmulatorPlatform platform;
 	public static final boolean isPortable = checkIsPortable();
 	private static Class<?> midletClass;
 	private static boolean forked;
@@ -84,47 +68,10 @@ public class Emulator implements Runnable {
 	private static boolean bridge;
 	public static boolean doja;
 
-	private static void initRichPresence() {
-		if (!Settings.rpc)
-			return;
-		final DiscordRPC rpc = (DiscordRPC) (Emulator.rpc = DiscordRPC.INSTANCE);
-		DiscordEventHandlers handlers = new DiscordEventHandlers();
-//        handlers.ready = new DiscordEventHandlers.OnReady() {
-//            public void accept(DiscordUser user) {}
-//        };
-		rpc.Discord_Initialize("823522436444192818", handlers, true, "");
-		DiscordRichPresence presence = new DiscordRichPresence();
-		presence.startTimestamp = rpcStartTimestamp = System.currentTimeMillis() / 1000;
-		presence.state = "No MIDlet loaded";
-		rpc.Discord_UpdatePresence(presence);
-		rpcCallbackThread = new Thread("KEmulator RPC-Callback-Handler") {
-			public void run() {
-				while (true) {
-					rpc.Discord_RunCallbacks();
-					try {
-						Thread.sleep(2000);
-					} catch (InterruptedException e) {
-						break;
-					}
-				}
-			}
-		};
-		rpcCallbackThread.start();
-	}
+	static int startWidth, startHeight;
 
-	public static void updatePresence() {
-		if (rpc == null)
-			return;
-		DiscordRPC rpc = (DiscordRPC) Emulator.rpc;
-		DiscordRichPresence presence = new DiscordRichPresence();
-		presence.state = rpcState;
-		presence.details = rpcDetails;
-		presence.startTimestamp = rpcStartTimestamp;
-		presence.endTimestamp = rpcEndTimestamp;
-		presence.partySize = rpcPartySize;
-		presence.partyMax = rpcPartyMax;
-		rpc.Discord_UpdatePresence(presence);
-	}
+	public static ZipFile midletJar;
+	public static final Object jarFileLock = new Object();
 
 	private Emulator() {
 		super();
@@ -176,30 +123,37 @@ public class Emulator implements Runnable {
 		return Emulator.customClassLoader;
 	}
 
-	public static void notifyDestroyed() {
-		if (rpcCallbackThread != null)
-			rpcCallbackThread.interrupt();
+	// not to be called manually
+	public static void shutdownHook() {
+		try {
+			synchronized (Emulator.jarFileLock) {
+				if (Emulator.midletJar != null) Emulator.midletJar.close();
+			}
+		} catch (Throwable ignored) {}
 		MMFPlayer.close();
+	}
+
+	public static void notifyDestroyed() {
+		RichPresence.close();
 		Emulator.emulatorimpl.getProperty().saveProperties();
 		if (Settings.autoGenJad) {
 			generateJad();
-			return;
 		}
-		saveTargetDevice();
+		AppSettings.save();
 	}
 
 	public static void openFileExternally(final String fileName) {
 		try {
-			if (win) {
+			if (Utils.win) {
 				// I intentionally use this only for windows.
 				Desktop.getDesktop().open(new File(fileName));
 				return;
 			}
-			if (macos) {
+			if (Utils.macos) {
 				Runtime.getRuntime().exec("open \"" + fileName + "\"");
 				return;
 			}
-			if (linux) {
+			if (Utils.linux) {
 				// I have no idea how to open files if there is no XDG.
 				// see https://github.com/ppy/osu/discussions/24499#discussioncomment-6698365 for fun.
 				if (Files.isExecutable(Paths.get("/usr/bin/xdg-open")))
@@ -218,7 +172,7 @@ public class Emulator implements Runnable {
 	}
 
 	public static void openUrlExternally(final String url) throws ConnectionNotFoundException {
-		if (linux) {
+		if (Utils.linux) {
 			if (Files.isExecutable(Paths.get("/usr/bin/xdg-open"))) {
 				try {
 					Runtime.getRuntime().exec(new String[]{"/usr/bin/xdg-open", url});
@@ -227,7 +181,7 @@ public class Emulator implements Runnable {
 				}
 			}
 		}
-		if (macos) {
+		if (Utils.macos) {
 			try {
 				Runtime.getRuntime().exec("open \"" + url + "\"");
 				return;
@@ -242,7 +196,7 @@ public class Emulator implements Runnable {
 		} catch (Exception ignored) {
 		}
 
-		if (win) {
+		if (Utils.win) {
 			try {
 				Runtime.getRuntime().exec("rundll32 url.dll,FileProtocolHandler " + url);
 				return;
@@ -261,11 +215,11 @@ public class Emulator implements Runnable {
 	}
 
 	private static void generateJad() {
-		if (Emulator.midletJar == null) {
+		if (Emulator.midletJarPath == null) {
 			return;
 		}
 		try {
-			final OutputStreamWriter outputStreamWriter = new OutputStreamWriter(new FileOutputStream(Emulator.midletJar.substring(0, Emulator.midletJar.length() - 3) + "jad"), "UTF-8");
+			final OutputStreamWriter outputStreamWriter = new OutputStreamWriter(new FileOutputStream(Emulator.midletJarPath.substring(0, Emulator.midletJarPath.length() - 3) + "jad"), "UTF-8");
 			final Enumeration<Object> keys = (Emulator.emulatorimpl.getAppProperties()).keys();
 			while (keys.hasMoreElements()) {
 				final String s;
@@ -274,12 +228,11 @@ public class Emulator implements Runnable {
 				}
 			}
 			if (Emulator.emulatorimpl.getAppProperties().getProperty("MIDlet-Jar-URL") == null) {
-				outputStreamWriter.write("MIDlet-Jar-URL: " + new File(Emulator.midletJar).getName() + "\r\n");
+				outputStreamWriter.write("MIDlet-Jar-URL: " + new File(Emulator.midletJarPath).getName() + "\r\n");
 			}
 			if (Emulator.emulatorimpl.getAppProperties().getProperty("MIDlet-Jar-Size") == null) {
-				outputStreamWriter.write("MIDlet-Jar-Size: " + new File(Emulator.midletJar).length() + "\r\n");
+				outputStreamWriter.write("MIDlet-Jar-Size: " + new File(Emulator.midletJarPath).length() + "\r\n");
 			}
-			outputStreamWriter.write("KEmu-Platform: " + Emulator.deviceName + "\r\n");
 			outputStreamWriter.flush();
 			outputStreamWriter.close();
 		} catch (Exception ex) {
@@ -287,138 +240,16 @@ public class Emulator implements Runnable {
 		}
 	}
 
-	private static void saveTargetDevice() {
-		if (Emulator.midletJar == null) {
-			return;
-		}
-		if (Settings.writeKemCfg) {
-			String propsPath = new File(Emulator.midletJar).getParentFile().getAbsolutePath() + File.separatorChar + "kemulator.cfg";
-			try {
-				String key = new File(Emulator.midletJar).getName();
-				key = key.substring(0, key.lastIndexOf("."));
-				final Properties properties = new Properties();
-				if (new File(propsPath).exists()) {
-					FileInputStream in = new FileInputStream(propsPath);
-					try {
-						properties.load(in);
-					} finally {
-						in.close();
-					}
-				}
-				properties.setProperty(key, Emulator.deviceName);
-				FileOutputStream out = new FileOutputStream(propsPath);
-				try {
-					properties.store(out, "KEmulator platforms");
-				} finally {
-					out.close();
-				}
-			} catch (Exception e) {
-				e.printStackTrace();
-			}
-			return;
-		}
-		final String propsPath = getUserPath() + File.separatorChar + "midlets.txt";
-		try {
-			String key = new File(Emulator.midletJar).getCanonicalPath();
-			final Properties properties = new Properties();
-			if (new File(propsPath).exists()) {
-				FileInputStream in = new FileInputStream(propsPath);
-				try {
-					properties.load(in);
-				} finally {
-					in.close();
-				}
-			}
-			StringBuilder s = new StringBuilder("!");
-
-			s.append(Emulator.deviceName).append(';')
-					.append("SCREEN_WIDTH:").append(Devices.getProperty("SCREEN_WIDTH")).append(';')
-					.append("SCREEN_HEIGHT:").append(Devices.getProperty("SCREEN_HEIGHT")).append(';')
-					.append("KEY_S1:").append(Devices.getProperty("KEY_S1")).append(';')
-					.append("KEY_S2:").append(Devices.getProperty("KEY_S2")).append(';')
-					.append("KEY_FIRE:").append(Devices.getProperty("KEY_FIRE")).append(';')
-					.append("KEY_UP:").append(Devices.getProperty("KEY_UP")).append(';')
-					.append("KEY_DOWN:").append(Devices.getProperty("KEY_DOWN")).append(';')
-					.append("KEY_LEFT:").append(Devices.getProperty("KEY_LEFT")).append(';')
-					.append("KEY_RIGHT:").append(Devices.getProperty("KEY_RIGHT"))
-			;
-
-			properties.setProperty(key, s.toString());
-			FileOutputStream out = new FileOutputStream(propsPath);
-			try {
-				properties.store(out, "KEmulator MIDlets database");
-			} finally {
-				out.close();
-			}
-		} catch (Exception e) {
-			e.printStackTrace();
-		}
-	}
-
-	private static void loadTargetDevice() {
-		final String property;
-		if ((property = Emulator.emulatorimpl.getAppProperties().getProperty("KEmu-Platform")) != null) {
-			tryToSetDevice(property);
-			return;
-		}
-		if (Emulator.midletJar == null) {
-			return;
-		}
-		String propsPath = getUserPath() + File.separatorChar + "midlets.txt";
-		if (new File(propsPath).exists()) {
-			try {
-				String key = new File(Emulator.midletJar).getCanonicalPath();
-				final Properties p = new Properties();
-				FileInputStream in = new FileInputStream(propsPath);
-				try {
-					p.load(in);
-				} finally {
-					in.close();
-				}
-				final String device = p.getProperty(key, null);
-				if (device != null) {
-					tryToSetDevice(device);
-					return;
-				}
-			} catch (Exception e) {
-				e.printStackTrace();
-			}
-		}
-
-		propsPath = new File(Emulator.midletJar).getParentFile().getAbsolutePath() + File.separatorChar + "kemulator.cfg";
-
-		String key = new File(Emulator.midletJar).getName();
-		key = key.substring(0, key.lastIndexOf("."));
-
-		if (new File(propsPath).exists()) {
-			try {
-				final Properties p = new Properties();
-				FileInputStream in = new FileInputStream(propsPath);
-				try {
-					p.load(in);
-				} finally {
-					in.close();
-				}
-				final String device = p.getProperty(key, null);
-				if (device != null) {
-					tryToSetDevice(device);
-				}
-			} catch (Exception e) {
-				e.printStackTrace();
-			}
-		}
-	}
-
 	public static String getTitle(String s) {
-		if (Settings.customTitle != null) return Settings.customTitle;
+		if (AppSettings.customTitle != null) return AppSettings.customTitle;
 		StringBuilder sb = new StringBuilder();
 		sb.append(platform.getTitleName()).append(' ').append(version);
 		if (s != null) {
 			sb.append(" - ").append(s);
-		} else if (midletJar != null && Emulator.emulatorimpl.getAppProperties() != null) {
+		} else if (midletJarPath != null && Emulator.emulatorimpl.getAppProperties() != null) {
 			sb.append(" - ").append(Emulator.emulatorimpl.getAppProperty(Emulator.doja ? "AppName" : "MIDlet-Name"));
 		}
-		if (Settings.uei) sb.append(" (UEI)");
+		if (AppSettings.uei) sb.append(" (UEI)");
 		return sb.toString();
 	}
 
@@ -431,12 +262,12 @@ public class Emulator implements Runnable {
 	}
 
 	public static String getAboutString() {
-		return "KEmulator nnmod\n" + version + "\n\n\t" + UILocale.get("ABOUT_INFO_EMULATOR", "Mobile Game Emulator");
+		return "KEmulator nnmod\n" + version;
 	}
 
 	public static void getLibraries() {
 		final File file;
-		if ((file = new File(getAbsolutePath() + File.separatorChar + "libs")).exists() && file.isDirectory()) {
+		if ((file = new File(getAbsolutePath(), "libs")).exists() && file.isDirectory()) {
 			final File[] listFiles = file.listFiles();
 			for (int i = 0; i < listFiles.length; ++i) {
 				final String absolutePath;
@@ -451,8 +282,8 @@ public class Emulator implements Runnable {
 		File file;
 		if (Emulator.jadPath != null) {
 			file = new File(Emulator.jadPath);
-		} else if (Emulator.midletJar != null) {
-			file = new File(Emulator.midletJar.substring(0, Emulator.midletJar.length() - 3) + "jad");
+		} else if (Emulator.midletJarPath != null) {
+			file = new File(Emulator.midletJarPath.substring(0, Emulator.midletJarPath.length() - 3) + "jad");
 		} else {
 			return null;
 		}
@@ -464,14 +295,14 @@ public class Emulator implements Runnable {
 
 	public static boolean getJarClasses() throws Exception {
 		try {
-			if (Emulator.midletClassName == null) {
-				Properties props = null;
+			if (Emulator.midletClassName == null || Emulator.midletJarPath != null) {
+				Properties props = new Properties();
 				File file;
 				if (Emulator.jadPath != null) {
 					file = new File(Emulator.jadPath);
 				} else {
 					final StringBuffer sb = new StringBuffer();
-					file = new File(sb.append(Emulator.midletJar, 0, Emulator.midletJar.length() - 3).append("jad").toString());
+					file = new File(sb.append(Emulator.midletJarPath, 0, Emulator.midletJarPath.length() - 3).append("jad").toString());
 					if (!file.exists()) {
 						sb.setCharAt(sb.length() - 1, 'm');
 						file = new File(sb.toString());
@@ -479,7 +310,7 @@ public class Emulator implements Runnable {
 				}
 				if (file.exists()) {
 					doja = file.getName().endsWith(".jam");
-					(props = new Properties()).load(new InputStreamReader(new FileInputStream(file), doja ? "Shift_JIS" : "UTF-8"));
+					props.load(new InputStreamReader(new FileInputStream(file), doja ? "Shift_JIS" : "UTF-8"));
 					final Enumeration<Object> keys = props.keys();
 					while (keys.hasMoreElements()) {
 						final String s = (String) keys.nextElement();
@@ -488,42 +319,45 @@ public class Emulator implements Runnable {
 				}
 				if (doja) {
 					Emulator.emulatorimpl.getLogStream().println("Running DoJa");
-					System.out.println(props);
-					if (Emulator.midletJar == null) {
+					if (Emulator.midletJarPath == null) {
 						String s = file.getName();
-						Emulator.midletJar = s.substring(0, s.length() - 1) + 'r';
+						Emulator.midletJarPath = s.substring(0, s.length() - 1) + 'r';
 					}
 				}
-				Emulator.emulatorimpl.getLogStream().println("Get classes from " + Emulator.midletJar);
-				final ZipFile zipFile;
-				final Enumeration entries = (zipFile = new ZipFile(Emulator.midletJar)).getEntries();
-				while (entries.hasMoreElements()) {
-					final ZipEntry zipEntry;
-					if ((zipEntry = (ZipEntry) entries.nextElement()).getName().endsWith(".class")) {
-						final String replace = zipEntry.getName().substring(0, zipEntry.getName().length() - 6).replace('/', '.');
-						Emulator.jarClasses.add(replace);
-						Emulator.emulatorimpl.getLogStream().println("Get class " + replace);
+				Emulator.emulatorimpl.getLogStream().println("Get classes from " + Emulator.midletJarPath);
+				synchronized (jarFileLock) {
+					midletJar = new ZipFile(Emulator.midletJarPath);
+					final Enumeration entries = midletJar.getEntries();
+					while (entries.hasMoreElements()) {
+						final ZipEntry zipEntry;
+						if ((zipEntry = (ZipEntry) entries.nextElement()).getName().endsWith(".class")) {
+							final String replace = zipEntry.getName().substring(0, zipEntry.getName().length() - 6).replace('/', '.');
+							Emulator.jarClasses.add(replace);
+							Emulator.emulatorimpl.getLogStream().println("Get class " + replace);
+						}
+					}
+					if (props == null || !props.containsKey(doja ? "AppClass" : "MIDlet-1")) {
+						try {
+							final Attributes mainAttributes = midletJar.getManifest().getMainAttributes();
+							for (final Map.Entry<Object, Object> entry : mainAttributes.entrySet()) {
+								props.put(entry.getKey().toString(), entry.getValue());
+							}
+							if (!props.containsKey(doja ? "AppClass" : "MIDlet-1")) throw new Exception();
+						} catch (Exception ex2) {
+							final InputStream inputStream;
+							(inputStream = midletJar.getInputStream(midletJar.getEntry("META-INF/MANIFEST.MF"))).skip(3L);
+							props.load(new InputStreamReader(inputStream, "UTF-8"));
+							inputStream.close();
+							final Enumeration<Object> keys2 = props.keys();
+							while (keys2.hasMoreElements()) {
+								final String s2 = (String) keys2.nextElement();
+								props.put(s2, props.getProperty(s2));
+							}
+						}
 					}
 				}
-				if (props == null || !props.containsKey(doja ? "AppClass" : "MIDlet-1")) {
-					try {
-						final Attributes mainAttributes = zipFile.getManifest().getMainAttributes();
-						props = new Properties();
-						for (final Map.Entry<Object, Object> entry : mainAttributes.entrySet()) {
-							props.put(entry.getKey().toString(), entry.getValue());
-						}
-						if (!props.containsKey(doja ? "AppClass" : "MIDlet-1")) throw new Exception();
-					} catch (Exception ex2) {
-						final InputStream inputStream;
-						(inputStream = zipFile.getInputStream(zipFile.getEntry("META-INF/MANIFEST.MF"))).skip(3L);
-						(props = new Properties()).load(new InputStreamReader(inputStream, "UTF-8"));
-						inputStream.close();
-						final Enumeration<Object> keys2 = props.keys();
-						while (keys2.hasMoreElements()) {
-							final String s2 = (String) keys2.nextElement();
-							props.put(s2, props.getProperty(s2));
-						}
-					}
+				if (Emulator.midletClassName != null) {
+					return true;
 				}
 				Emulator.emulatorimpl.setAppProperties(props);
 				if (props.containsKey("MIDlet-2") && props.containsKey("MIDlet-1")) {
@@ -543,7 +377,6 @@ public class Emulator implements Runnable {
 					}
 					if (midletKeys.size() != 0) {
 						// must have to load device before screen is initialized
-						loadTargetDevice();
 
 						int n = emulatorimpl.getScreen().showMidletChoice(midletKeys);
 						if (n == -1) {
@@ -596,7 +429,6 @@ public class Emulator implements Runnable {
 			}
 			throw ex;
 		}
-		loadTargetDevice();
 		return true;
 	}
 
@@ -621,7 +453,7 @@ public class Emulator implements Runnable {
 		final String[] split = Emulator.classPath.split(";");
 		for (int i = 0; i < split.length; ++i) {
 			final File file;
-			if ((file = new File(split[i] + File.separatorChar + s)).exists()) {
+			if ((file = new File(split[i], s)).exists()) {
 				return file;
 			}
 		}
@@ -629,20 +461,20 @@ public class Emulator implements Runnable {
 	}
 
 	public static void setupMRUList() {
-		if (Emulator.midletJar == null && Settings.recentJars[0].trim().equalsIgnoreCase("")) {
+		if (Emulator.midletJarPath == null && Settings.recentJars[0].trim().equalsIgnoreCase("")) {
 			return;
 		}
 		if (Settings.recentJars[0].trim().equalsIgnoreCase("")) {
-			Settings.recentJars[0] = Emulator.midletJar;
+			Settings.recentJars[0] = Emulator.midletJarPath;
 			return;
 		}
-		if (Emulator.midletJar != null) {
+		if (Emulator.midletJarPath != null) {
 			for (int i = 4; i > 0; --i) {
 				if (Settings.recentJars[i].equalsIgnoreCase(Settings.recentJars[0])) {
 					Settings.recentJars[i] = Settings.recentJars[1];
 					Settings.recentJars[1] = Settings.recentJars[0];
-					if (!Settings.recentJars[0].equalsIgnoreCase(Emulator.midletJar)) {
-						Settings.recentJars[0] = Emulator.midletJar;
+					if (!Settings.recentJars[0].equalsIgnoreCase(Emulator.midletJarPath)) {
+						Settings.recentJars[0] = Emulator.midletJarPath;
 					}
 					return;
 				}
@@ -664,14 +496,14 @@ public class Emulator implements Runnable {
 		String[] array;
 		int n;
 		String midletJar;
-		if (Emulator.midletJar == null) {
+		if (Emulator.midletJarPath == null) {
 			array = Settings.recentJars;
 			n = 0;
 			midletJar = "";
 		} else {
 			array = Settings.recentJars;
 			n = 0;
-			midletJar = Emulator.midletJar;
+			midletJar = Emulator.midletJarPath;
 		}
 		array[n] = midletJar;
 	}
@@ -681,44 +513,21 @@ public class Emulator implements Runnable {
 		System.setProperty("microedition.profiles", "MIDP-2.0");
 		if (platform.supportsM3G())
 			System.setProperty("microedition.m3g.version", "1.1");
-		System.setProperty("microedition.encoding", Settings.fileEncoding);
+		System.setProperty("microedition.encoding", AppSettings.fileEncoding);
 		if (System.getProperty("microedition.locale") == null) {
-			System.setProperty("microedition.locale", Settings.locale);
+			System.setProperty("microedition.locale", AppSettings.locale);
 		}
 		if (System.getProperty("microedition.platform") == null) {
-			String plat = Emulator.deviceName;
-			DevicePlatform c = Devices.getPlatform(Emulator.deviceName);
-			if (c.exists("OVERRIDE_NAME")) {
-				plat = c.getString("OVERRIDE_NAME");
-			}
-			if (c.exists("R")) {
-				plat += "-" + c.getString("R");
-			}
+			String plat = AppSettings.microeditionPlatform;
 
 			Emulator.httpUserAgent = plat + " (Java/" + System.getProperty("java.version") + "; KEmulator/" + version + ")";
 
-			if (!c.exists("PLATFORM_VERSION2") && c.exists("PLATFORM_VERSION")) {
-				plat += "/" + c.getString("PLATFORM_VERSION");
-			}
-			if (c.exists("CUSTOM_UA")) {
-				Emulator.httpUserAgent = c.getString("CUSTOM_UA");
-			}
-			if (c.exists("PLATFORM_VERSION2") && c.exists("PLATFORM_VERSION")) {
-				plat += "/" + c.getString("PLATFORM_VERSION2");
-			}
-//                if (c.exists("SW_PLATFORM")) {
-//                    plat += "sw_platform=" + c.getString("SW_PLATFORM");
-//                }
-//                if (c.exists("SW_PLATFORM_VERSION")) {
-//                    plat += ";sw_platform_version=" + c.getString("SW_PLATFORM_VERSION");
-//                }
 			System.setProperty("microedition.platform", plat);
+			System.setProperty("device.model", plat);
 		}
 		System.setProperty("microedition.media.version", "1.0");
 		System.setProperty("supports.mixing", "true");
 		System.setProperty("supports.audio.capture", "false");
-		System.setProperty("supports.video.capture", "false");
-		System.setProperty("supports.photo.capture", "false");
 		System.setProperty("supports.recording", "false");
 		System.setProperty("microedition.io.file.FileConnection.version", "1.0");
 		System.setProperty("microedition.pim.version", "1.0");
@@ -745,53 +554,15 @@ public class Emulator implements Runnable {
 		System.setProperty("com.nokia.mid.ui.version", "1.4");
 		System.setProperty("com.nokia.mid.ui.customfontsize", "true");
 		System.setProperty("com.nokia.pointer.number", "0");
-		System.setProperty("kemulator.hwid", getHWID());
+		System.setProperty("kemulator.hwid", Utils.getHWID());
 		System.setProperty("microedition.amms.version", "1.0");
 		System.setProperty("org.pigler.api.version", "1.4-kemulator");
 		if (platform.isX64()) System.setProperty("kemulator.x64", "true");
 		System.setProperty("kemulator.rpc.version", "1.0");
-
-		if (!platform.isX64() && System.getProperty("kemulator.disablecamera") == null && !Settings.disableCamera) {
-			try {
-				Webcam w = Webcam.getDefault();
-				if (w != null) {
-					System.setProperty("supports.video.capture", "true");
-					System.setProperty("supports.photo.capture", "true");
-					System.setProperty("supports.mediacapabilities", "camera");
-					System.setProperty("camera.orientations", "devcam0:inwards");
-					Dimension d = w.getViewSize();
-					System.setProperty("camera.resolutions", "devcam0:" + d.width + "x" + d.height);
-				}
-			} catch (Throwable ignored) {
-			}
-		}
-
-		try {
-			Settings.softbankApi = Emulator.emulatorimpl.getAppProperty("MIDxlet-API") != null;
-		} catch (Exception ignored) {
-		}
+		System.setProperty("ru.nnproject.symbiangl", "0.2-kemulator");
 	}
 
-	private static String getHWID() {
-		try {
-			String s = System.getenv("COMPUTERNAME") + System.getProperty("user.name") + System.getenv("PROCESSOR_IDENTIFIER") + System.getenv("PROCESSOR_LEVEL");
-			MessageDigest md = MessageDigest.getInstance("MD5");
-			md.update(s.getBytes());
-			StringBuffer sb = new StringBuffer();
-			byte[] b = md.digest();
-			for (byte aByteData : b) {
-				String hex = Integer.toHexString(0xff & aByteData);
-				if (hex.length() == 1) sb.append('0');
-				sb.append(hex);
-			}
-
-			return sb.toString();
-		} catch (Exception e) {
-			return "null";
-		}
-	}
-
-	public static void main(final String[] commandLineArguments) {
+	public static void main(final String[] args) {
 		try {
 			platform = ((IEmulatorPlatform) Class.forName("emulator.EmulatorPlatform").newInstance());
 		} catch (Exception e) {
@@ -813,37 +584,53 @@ public class Emulator implements Runnable {
 		} catch (Exception ignored) {
 		}
 		String arch = System.getProperty("os.arch");
-		if (!platform.isX64() && (!arch.contains("86") || !win)) {
+		if (!platform.isX64() && (!arch.contains("86") || !Utils.win)) {
 			JOptionPane.showMessageDialog(new JPanel(), "Can't run this version of KEmulator nnmod on this architecture (" + arch + "). Try multi-platform version instead.");
-			System.exit(0);
+			System.exit(1);
 			return;
 		}
 		try {
+			Exception librariesException = null;
 			try {
 				platform.loadLibraries();
 			} catch (Exception e) {
-				e.printStackTrace();
-				JOptionPane.showMessageDialog(new JPanel(), "Failed to load libraries: " + e.getMessage());
-				System.exit(0);
-				return;
+				librariesException = e;
 			}
 			EmulatorMIDI.initDevices();
-			Emulator.commandLineArguments = commandLineArguments;
+			Emulator.commandLineArguments = args;
 			UILocale.initLocale();
-			parseLaunchArgs(commandLineArguments); //
-			if (bridge)
-				Emulator.emulatorimpl = new BridgeFrontend("/tmp/kem/", 240, 320);
-			else
-				Emulator.emulatorimpl = new SWTFrontend();
-			parseLaunchArgs(commandLineArguments);
-			// Force m3g engine to LWJGL in x64 build
-			if (platform.isX64()) Settings.micro3d = Settings.g3d = 1;
+			System.setProperty("sun.net.http.allowRestrictedHeaders", "true");
+			for (String s : args) {
+				if ("-s".equals(s)) {
+					forked = true;
+					continue;
+				}
+				if ("-uei".equals(s)) {
+					AppSettings.uei = true;
+					continue;
+				}
+			}
 
 			// Restart with additional arguments required for specific os or java version
-			if (!(forked || Settings.uei) && (macos || isJava9())) {
+			if (!(forked || AppSettings.uei) && (librariesException != null || Utils.macos || Utils.isJava9())) {
 				loadGame(null, false);
 				return;
 			}
+			if (librariesException != null) {
+				librariesException.printStackTrace();
+				JOptionPane.showMessageDialog(new JPanel(), "Failed to load libraries: " + librariesException.getMessage());
+				System.exit(1);
+				return;
+			}
+			
+			if (bridge)
+				Emulator.emulatorimpl = new BridgeFrontend("/tmp/kem/",
+						startWidth != 0 ? startWidth : 240, startHeight != 0 ? startHeight : 320);
+			else
+				Emulator.emulatorimpl = new SWTFrontend();
+			parseLaunchArgs(args);
+			// Force m3g engine to LWJGL in x64 build
+			if (platform.isX64()) Settings.micro3d = Settings.g3d = 1;
 
 			platform.load3D();
 			Controllers.refresh(true);
@@ -851,17 +638,19 @@ public class Emulator implements Runnable {
 					+ System.getProperty("os.name") + ' ' + System.getProperty("os.arch")
 					+ " (" + System.getProperty("os.version") + "), Java: "
 					+ System.getProperty("java.version") + " (" + System.getProperty("java.vendor") + ")");
-			Devices.load(Emulator.deviceFile);
-			tryToSetDevice(Emulator.deviceName);
+			Devices.load(Settings.deviceFile);
+			AppSettings.init();
+
 			setupMRUList();
-			initRichPresence();
+			RichPresence.initRichPresence();
 
 			if (Settings.autoUpdate == 0) {
 				Settings.autoUpdate = updated ? 2 : Emulator.emulatorimpl.getScreen().showUpdateDialog(0);
 			}
 			backgroundThread.start();
 
-			if (Emulator.midletClassName == null && Emulator.midletJar == null) {
+			if (Emulator.midletClassName == null && Emulator.midletJarPath == null) {
+				Emulator.emulatorimpl.getScreen().initScreen(AppSettings.screenWidth, AppSettings.screenHeight);
 				Emulator.emulatorimpl.getScreen().runEmpty();
 				emulatorimpl.dispose();
 				System.exit(0);
@@ -869,6 +658,7 @@ public class Emulator implements Runnable {
 			}
 			Emulator.record = new KeyRecords();
 			getLibraries();
+			Runtime.getRuntime().addShutdownHook(new Thread(Emulator::shutdownHook));
 			try {
 				if (!getJarClasses()) {
 					Emulator.emulatorimpl.getScreen().showMessage(UILocale.get("LOAD_CLASSES_ERROR", "Get Classes Failed!! Plz check the input jar or classpath."));
@@ -881,35 +671,47 @@ public class Emulator implements Runnable {
 				System.exit(1);
 				return;
 			}
-			InputStream inputStream = null;
-			try {
-				String iconPath;
-				if ((iconPath = Emulator.emulatorimpl.getAppProperty("MIDlet-Icon")) != null) {
-					Emulator.iconPath = iconPath;
-					inputStream = emulator.custom.CustomJarResources.getResourceAsStream(iconPath);
-				} else if ((iconPath = Emulator.emulatorimpl.getAppProperty("AppIcon")) != null) {
-					Emulator.iconPath = iconPath = iconPath.split(",")[0].trim();
-					inputStream = emulator.custom.CustomJarResources.getResourceAsStream(iconPath);
-				} else {
-					if ((iconPath = Emulator.emulatorimpl.getAppProperty("MIDlet-1")) != null) {
-						Emulator.iconPath = iconPath = iconPath.split(",")[1].trim();
-						inputStream = emulator.custom.CustomJarResources.getResourceAsStream(iconPath);
-					}
-				}
-			} catch (Exception ex3) {
-				ex3.printStackTrace();
-			}
-			if (Emulator.emulatorimpl.getAppProperty("MIDlet-Name") != null) {
-				Emulator.rpcState = (Settings.uei ? "Debugging " : "Running ") + Emulator.emulatorimpl.getAppProperty("MIDlet-Name");
-				Emulator.rpcDetails = Settings.uei ? "UEI" : new File(midletJar).getName();
-				updatePresence();
-			}
-			Emulator.emulatorimpl.getScreen().setWindowIcon(inputStream);
-			setProperties();
 			if (Emulator.midletClassName == null) {
 				Emulator.emulatorimpl.getScreen().showMessage(UILocale.get("LOAD_MIDLET_ERROR", "Can not find MIDlet class. Plz check jad or use -midlet param."));
 				System.exit(1);
 				return;
+			}
+			InputStream inputStream = null;
+			try {
+				String iconPath = getEmulator().getAppProperty("MIDlet-Icon");
+				if (iconPath == null) {
+					if ((iconPath = getEmulator().getAppProperty("AppIcon")) != null) {
+						iconPath = iconPath.split(",")[0].trim();
+					}
+				}
+				if (iconPath == null) {
+					if ((iconPath = getEmulator().getAppProperty("MIDlet-1")) != null) {
+						iconPath = iconPath.split(",")[1].trim();
+					}
+				}
+				if (iconPath != null && !iconPath.trim().isEmpty()) {
+					Emulator.iconPath = iconPath;
+					inputStream = ResourceManager.getResourceAsStream(iconPath);
+				}
+			} catch (Exception ex3) {
+				ex3.printStackTrace();
+			}
+
+			try {
+				AppSettings.softbankApi = Emulator.emulatorimpl.getAppProperty("MIDxlet-API") != null;
+			} catch (Exception ignored) {}
+
+			if (AppSettings.load(false) == 0) {
+				Emulator.emulatorimpl.openAppSettings(true);
+			}
+			tryToSetDevice();
+			Emulator.emulatorimpl.getScreen().initScreen(AppSettings.screenWidth, AppSettings.screenHeight);
+			Emulator.emulatorimpl.getScreen().setWindowIcon(inputStream);
+			setProperties();
+			if (Emulator.emulatorimpl.getAppProperty("MIDlet-Name") != null) {
+				RichPresence.rpcState = (AppSettings.uei ? "Debugging " : "Running ") + Emulator.emulatorimpl.getAppProperty("MIDlet-Name");
+				RichPresence.rpcDetails = AppSettings.uei ? "UEI" : new File(midletJarPath).getName();
+				RichPresence.updatePresence();
 			}
 			if (doja) {
 				Emulator.eventQueue = new EventQueue();
@@ -917,7 +719,8 @@ public class Emulator implements Runnable {
 			} else {
 				getEmulator().getLogStream().stdout("Launch MIDlet class: " + Emulator.midletClassName);
 				try {
-					midletClass = Class.forName(Emulator.midletClassName = Emulator.midletClassName.replace('/', '.'), true, Emulator.customClassLoader);
+					midletClassName = midletClassName.replace('/', '.');
+					midletClass = Class.forName(midletClassName, true, customClassLoader);
 				} catch (Throwable e) {
 					e.printStackTrace();
 					Emulator.emulatorimpl.getScreen().showMessage(UILocale.get("FAIL_LAUNCH_MIDLET", "Fail to launch the MIDlet class:") + " " + Emulator.midletClassName, CustomMethod.getStackTrace(e));
@@ -928,7 +731,11 @@ public class Emulator implements Runnable {
 			}
 			new Thread(new Emulator()).start();
 			Emulator.emulatorimpl.getScreen().runWithMidlet();
-		} catch (Throwable e) {
+		} catch (UnsatisfiedLinkError e) {
+			e.printStackTrace();
+			JOptionPane.showMessageDialog(new JPanel(), "Failed to load libraries: " + e.getMessage());
+			System.exit(1);
+		}  catch (Throwable e) {
 			e.printStackTrace();
 		}
 		try {
@@ -938,37 +745,18 @@ public class Emulator implements Runnable {
 		System.exit(0);
 	}
 
-	private static void tryToSetDevice(String deviceName) {
-		String[][] c = null;
-		if (deviceName.startsWith("!")) {
-			deviceName = deviceName.substring(1);
-			String[] a = deviceName.split(";");
-			c = new String[a.length][2];
-			int idx = 0;
-			for (String s : a) {
-				int i = s.indexOf(':');
-				if (i == -1) {
-					deviceName = s;
-					continue;
-				}
-				c[idx][0] = s.substring(0, i);
-				c[idx++][1] = s.substring(i + 1);
-			}
+	private static void tryToSetDevice() {
+		String deviceName = AppSettings.devicePreset;
+		if (!Devices.setPreset(deviceName)) {
+			Devices.setPreset(Devices.getDefaultPreset());
 		}
-		Emulator.deviceName = deviceName;
-		if (!Devices.setPlatform(Emulator.deviceName)) {
-			Devices.setPlatform(Emulator.deviceName = "SonyEricssonK800");
+		if (startWidth != 0) {
+			AppSettings.screenWidth = startWidth;
 		}
-		Emulator.emulatorimpl.getProperty().setCustomProperties();
-		if (c != null) {
-			for (String[] p : c) {
-				if (p == null || p[0] == null) continue;
-				Devices.setProperty(p[0], p[1]);
-			}
+		if (startHeight != 0) {
+			AppSettings.screenHeight = startHeight;
 		}
 		Devices.writeProperties();
-		Emulator.emulatorimpl.getProperty().updateCustomProperties();
-		Emulator.emulatorimpl.getProperty().resetDeviceName();
 		KeyMapping.init();
 	}
 
@@ -976,17 +764,19 @@ public class Emulator implements Runnable {
 		if (array.length < 1) {
 			return false;
 		}
-		if (array.length == 1 && (array[0].endsWith(".jar") || array[0].endsWith(".jad")) || array[0].endsWith(".jam")) {
+		if (array.length == 1 && (array[0].toLowerCase().endsWith(".jar")
+				|| array[0].toLowerCase().endsWith(".jad"))
+				|| array[0].toLowerCase().endsWith(".jam")) {
 			String path = array[0];
-			if (path.endsWith(".jar")) {
+			if (path.toLowerCase().endsWith(".jar")) {
 				try {
-					Emulator.midletJar = new File(path).getCanonicalPath();
+					Emulator.midletJarPath = new File(path).getCanonicalPath();
 				} catch (Exception e) {
-					Emulator.midletJar = path;
+					Emulator.midletJarPath = path;
 				}
 			} else {
 				Emulator.jadPath = path;
-				Emulator.midletJar = getMidletJarUrl(path);
+				Emulator.midletJarPath = getMidletJarUrl(path);
 			}
 			return true;
 		}
@@ -994,17 +784,18 @@ public class Emulator implements Runnable {
 			String key = array[i].trim();
 			if (key.startsWith("-")) {
 				key = key.substring(1).toLowerCase();
-			} else if (i == array.length - 1 && (array[0].endsWith(".jar") || array[0].endsWith(".jad") || array[0].endsWith(".jam"))) {
-				String path = array[0];
-				if (path.endsWith(".jar")) {
+			} else if (key.toLowerCase().endsWith(".jar")
+					|| key.toLowerCase().endsWith(".jad")
+					|| key.toLowerCase().endsWith(".jam")) {
+				if (key.toLowerCase().endsWith(".jar")) {
 					try {
-						Emulator.midletJar = new File(path).getCanonicalPath();
+						Emulator.midletJarPath = new File(key).getCanonicalPath();
 					} catch (Exception e) {
-						Emulator.midletJar = path;
+						Emulator.midletJarPath = key;
 					}
 				} else {
-					Emulator.jadPath = path;
-					Emulator.midletJar = getMidletJarUrl(path);
+					Emulator.jadPath = key;
+					Emulator.midletJarPath = getMidletJarUrl(key);
 				}
 			}
 			String value = null;
@@ -1013,11 +804,12 @@ public class Emulator implements Runnable {
 				if (!value.startsWith("-")) i++;
 				else value = null;
 			}
-			if (key.equals("awt")) {
-				Settings.g2d = 1;
-			} else if (key.equals("swt")) {
-				Settings.g2d = 0;
-			} else if (key.equals("lwj")) {
+//			if (key.equals("awt")) {
+//				Settings.g2d = 1;
+//			} else if (key.equals("swt")) {
+//				Settings.g2d = 0;
+//			} else
+			if (key.equals("lwj")) {
 				Settings.g3d = 1;
 			} else if (key.equals("swerve")) {
 				Settings.g3d = 0;
@@ -1028,19 +820,24 @@ public class Emulator implements Runnable {
 			} else if (key.equalsIgnoreCase("log")) {
 				Settings.showLogFrame = true;
 			} else if (key.equalsIgnoreCase("uei")) {
-				Settings.uei = true;
+				AppSettings.uei = true;
 			} else if (key.equalsIgnoreCase("s")) {
 				forked = true;
 			} else if (key.equalsIgnoreCase("updated")) {
 				updated = true;
 			} else if (key.equals("bridge")) {
 				bridge = true;
+			} else if (key.equals("xray")) {
+				AppSettings.xrayView = true;
+				AppSettings.xrayBuffer = true;
+			} else if (key.equalsIgnoreCase("hide")) {
+				Settings.hideEmulation = true;
 			} else if (value != null) {
 				if (key.equalsIgnoreCase("jar")) {
 					try {
-						Emulator.midletJar = new File(value).getCanonicalPath();
+						Emulator.midletJarPath = new File(value).getCanonicalPath();
 					} catch (Exception e) {
-						Emulator.midletJar = value;
+						Emulator.midletJarPath = value;
 					}
 				} else if (key.equalsIgnoreCase("midlet")) {
 					Emulator.midletClassName = array[i];
@@ -1051,45 +848,69 @@ public class Emulator implements Runnable {
 				} else if (key.equalsIgnoreCase("rec")) {
 					Settings.recordedKeysFile = value;
 					Settings.playingRecordedKeys = new File(value).exists();
-				} else if (key.equalsIgnoreCase("device")) {
-					Emulator.deviceName = value;
-				} else if (key.equalsIgnoreCase("devicefile")) {
-					Emulator.deviceFile = value;
 				} else if (key.equalsIgnoreCase("fontname")) {
 					getEmulator().getProperty().setDefaultFontName(value);
 				} else if (key.equalsIgnoreCase("fontsmall")) {
-					getEmulator().getProperty().setFontSmallSize(Integer.parseInt(value));
+					AppSettings.fontSmallSize = Integer.parseInt(value);
 				} else if (key.equalsIgnoreCase("fontmedium")) {
-					getEmulator().getProperty().getFontMediumSize(Integer.parseInt(value));
+					AppSettings.fontMediumSize = Integer.parseInt(value);
 				} else if (key.equalsIgnoreCase("fontlarge")) {
-					getEmulator().getProperty().getFontLargeSize(Integer.parseInt(value));
+					AppSettings.fontLargeSize = Integer.parseInt(value);
+				} else if (key.equalsIgnoreCase("screen")) {
+					String[] size = value.split("x");
+					if (size.length == 2 && Integer.parseInt(size[0]) > 0 && Integer.parseInt(size[1]) > 0) {
+						startWidth = Integer.parseInt(size[0]);
+						startHeight = Integer.parseInt(size[1]);
+						Devices.writeProperties();
+						EmulatorScreen.sizeW = -1;
+						EmulatorScreen.sizeH = -1;
+						Settings.resizeMode = ResizeMethod.Fit;
+					}
 				} else if (key.equalsIgnoreCase("key")) {
 					KeyMapping.keyArg(value);
+				} else if (key.equals("new-project")) {
+					new Property();
+					IdeaUtils.createProjectCLI(value);
+				} else if (key.equals("restore")) {
+					new Property();
+					IdeaUtils.restoreProjectCLI(value);
+				} else if (key.equals("convert")) {
+					new Property();
+					IdeaUtils.convertProjectCLI(value);
+				} else if (key.equals("edit")) {
+					new Property();
+					IdeaUtils.editProjectCLI(value);
 				}
 			}
 		}
 		return true;
 	}
 
-	public static String getProcessOutput(String commandline) throws IOException {
-		Process regRequest = Runtime.getRuntime().exec(commandline);
-		StringBuilder sw = new StringBuilder();
-		try (InputStream is = regRequest.getInputStream()) {
-			int c;
-			while ((c = is.read()) != -1)
-				sw.append((char) c);
-		}
-		return sw.toString();
-	}
-
 	public static String getAbsoluteFile() {
 		String s = System.getProperty("user.dir");
-		if (new File(s + File.separatorChar + "KEmulator.jar").exists() || new File(s + File.separatorChar + "sensorsimulator.jar").exists()) {
+		if (new File(s, "KEmulator.jar").exists() || new File(s, "sensorsimulator.jar").exists()) {
 			return s + File.separatorChar + "KEmulator.jar";
 		}
-		s = Emulator.class.getProtectionDomain().getCodeSource().getLocation().getFile().substring(1);
-		if (s.endsWith("bin/"))
-			s = s.substring(0, s.length() - 4);
+		s = Emulator.class.getProtectionDomain().getCodeSource().getLocation().getFile();
+		if (Utils.win) s = s.substring(1);
+		if (debugBuild && s.endsWith("/")) {
+			if (s.endsWith("bin/production/KEmulator_base/")) {
+				// IDEA project
+				s = s.substring(0, s.length() - "bin/production/KEmulator_base/".length()) + "home";
+			} else if (s.endsWith("eclipse/KEmulator_base/bin/")) {
+				// Eclipse project
+				s = s.substring(0, s.length() - "eclipse/KEmulator_base/bin/".length()) + "home";
+			}
+//			else if (s.endsWith("bin/")) {
+//				s = s.substring(0, s.length() - 4);
+//			}
+			if (new File(s, "KEmulator.jar").exists() || new File(s, "sensorsimulator.jar").exists()) {
+				s = s + File.separatorChar + "KEmulator.jar";
+			} else {
+				System.out.println("Running from " + s);
+				throw new RuntimeException("Could not find home directory");
+			}
+		}
 		try {
 			return URLDecoder.decode(s, "UTF-8");
 		} catch (Exception ex) {
@@ -1099,7 +920,7 @@ public class Emulator implements Runnable {
 
 	public static String getAbsolutePath() {
 		String s = System.getProperty("user.dir");
-		if (new File(s + File.separatorChar + "KEmulator.jar").exists() || new File(s + File.separatorChar + "sensorsimulator.jar").exists()) {
+		if (new File(s, "KEmulator.jar").exists() || new File(s, "sensorsimulator.jar").exists()) {
 			return s;
 		}
 		File file = new File(getAbsoluteFile()).getParentFile();
@@ -1118,7 +939,7 @@ public class Emulator implements Runnable {
 			return false;
 
 		// we may live in system folders but are writable (container, misconfiguration, etc.)
-		if (linux) {
+		if (Utils.linux) {
 			// we installed from package
 			if (path.startsWith("/opt/") || path.startsWith("/usr/") || path.startsWith("/bin/"))
 				return false;
@@ -1129,10 +950,10 @@ public class Emulator implements Runnable {
 
 			return true;
 		}
-		if (win) {
+		if (Utils.win) {
 			// installer will write to registry path to installed jar. Let's check it.
 			try {
-				String output = getProcessOutput("reg query \"HKEY_LOCAL_MACHINE\\Software\\nnproject\\KEmulator\" /v JarInstalledPath");
+				String output = Utils.getProcessOutput(new String[]{"reg", "query", "HKEY_LOCAL_MACHINE\\Software\\nnproject\\KEmulator", "/v", "JarInstalledPath"}, false);
 				int i = output.indexOf("REG_SZ");
 				if (i != -1) {
 					String pathFromReg = output.substring(i + 6).trim();
@@ -1160,9 +981,9 @@ public class Emulator implements Runnable {
 		{
 			if (!isPortable) {
 				String s;
-				if (linux) {
+				if (Utils.linux) {
 					s = System.getenv("HOME") + "/.local/share/KEmulator/";
-				} else if (win) {
+				} else if (Utils.win) {
 					s = System.getenv("APPDATA");
 					if (s == null)
 						break installed;
@@ -1186,36 +1007,21 @@ public class Emulator implements Runnable {
 		return getAbsolutePath();
 	}
 
-	/**
-	 * Attempts to find JDK near JRE KEmulator is running on.
-	 *
-	 * @return Null on failure, JDK home on success.
-	 */
-	public static String getJdkHome() {
-		String realHome = System.getProperty("java.home");
-		if (Files.exists(Paths.get(realHome, "bin", win ? "javac.exe" : "javac"))) {
-			// we run with JDK
-			return realHome;
-		}
-		String parent = Paths.get(realHome).getParent().toString();
-		if (Files.exists(Paths.get(parent, "bin", win ? "javac.exe" : "javac"))) {
-			// we run with JRE in JDK
-			return realHome;
-		}
-		// standalone JRE
-		return null;
-	}
-
 	public static void loadGame(String s, boolean b) {
 		loadGame(s, Settings.g2d, Settings.g3d, Settings.micro3d, b);
 	}
 
 	public static void loadGame(final String s, final int engine2d, final int engine3d, int mascotEngine, final boolean b) {
 		ArrayList<String> cmd = new ArrayList<String>();
-		getEmulator().getLogStream().println(s == null ? "Restarting" : ("loadGame: " + s));
+		if (emulatorimpl != null ) {
+			getEmulator().getLogStream().println(s == null ? "Restarting" : ("loadGame: " + s));
+		} else {
+			System.out.println(s == null ? "Restarting" : ("loadGame: " + s));
+		}
 		String javahome = System.getProperty("java.home");
-		cmd.add(javahome == null || javahome.length() < 1 ? "java" : (javahome + (!win ? "/bin/java" : "/bin/java.exe")));
+		cmd.add(javahome == null || javahome.length() < 1 ? "java" : (javahome + (!Utils.win ? "/bin/java" : "/bin/java.exe")));
 		cmd.add("-cp");
+		// TODO clean duplicate entries
 		cmd.add(System.getProperty("java.class.path"));
 		cmd.add("-Xmx" + Settings.xmx + "M");
 
@@ -1229,12 +1035,16 @@ public class Emulator implements Runnable {
 		if ("false".equals(System.getProperty("sun.java3d.d3d"))) {
 			cmd.add("-Dsun.java3d.d3d=false");
 		}
+		if ("false".equals(System.getProperty("swt.autoScale"))) {
+			cmd.add("-Dswt.autoScale=false");
+		}
 
 		// mac cocoa fix
-		if (os.startsWith("darwin") || os.startsWith("mac os")) {
+		if (Utils.macos) {
 			cmd.add("-XstartOnFirstThread");
 		}
 
+		cmd.add("-Dfile.encoding=UTF-8");
 
 		if (debugBuild) {
 			File f = new File(getAbsolutePath() + "/../eclipse/KEmulator_base/agent.jar");
@@ -1247,7 +1057,7 @@ public class Emulator implements Runnable {
 			cmd.add("-javaagent:" + getAbsoluteFile());
 		}
 
-		if (isJava9()) {
+		if (Utils.isJava9()) {
 			cmd.add("--add-opens");
 			cmd.add("java.base/java.lang=ALL-UNNAMED");
 			cmd.add("--add-opens");
@@ -1258,19 +1068,37 @@ public class Emulator implements Runnable {
 			cmd.add("java.base/java.io=ALL-UNNAMED");
 			cmd.add("--add-opens");
 			cmd.add("java.base/java.util=ALL-UNNAMED");
-			if (isJava17())
+			cmd.add("--add-opens");
+			cmd.add("jdk.unsupported/sun.misc=ALL-UNNAMED");
+			cmd.add("--add-opens");
+			cmd.add("java.desktop/com.sun.media.sound=ALL-UNNAMED");
+			cmd.add("--add-opens");
+			cmd.add("java.desktop/javax.sound.midi=ALL-UNNAMED");
+			if (Utils.isJava17())
 				cmd.add("--enable-native-access=ALL-UNNAMED");
 		}
 
 		cmd.add("emulator.Emulator");
 		if (s == null) {
+			boolean ignoreNext = false;
 			for (String a : Emulator.commandLineArguments) {
+				if (ignoreNext) {
+					ignoreNext = false;
+					continue;
+				}
+				if (a.equals("-screen")) {
+					ignoreNext = true;
+					continue;
+				}
 				if (a.equals("-swt") || a.equals("-awt")
-						|| a.equals("-swerve") || a.equals("-lwj"))
+						|| a.equals("-swerve") || a.equals("-lwj")
+						|| a.equals("-mascotdll") || a.equals("-mascotgl")
+						|| a.equals("-s") || a.equals("-updated")
+						|| a.equals("-uei"))
 					continue;
 				cmd.add(a);
 			}
-		} else if (s.endsWith(".jad") || s.endsWith(".jam")) {
+		} else if (s.toLowerCase().endsWith(".jad") || s.toLowerCase().endsWith(".jam")) {
 			cmd.add("-jad");
 			cmd.add(s);
 			cmd.add("-jar");
@@ -1290,13 +1118,18 @@ public class Emulator implements Runnable {
 
 		cmd.add("-s");
 
-		getEmulator().disposeSubWindows();
-		notifyDestroyed();
+		try {
+			getEmulator().disposeSubWindows();
+			notifyDestroyed();
+		} catch (NullPointerException ignored) {}
 		try {
 			ProcessBuilder newKem = new ProcessBuilder().directory(new File(getAbsolutePath())).command(cmd).inheritIO();
-			// something inside SWT libs setting this to X11 on dual-server systems.
-			// GTK is clever enough to decide itself, so clearing it
 			newKem.environment().remove("GDK_BACKEND");
+			newKem.environment().remove("WAYLAND_DISPLAY");
+			if (Utils.linux) {
+				// we now force x11 because SWT is broken on wayland
+				newKem.environment().put("GDK_BACKEND", "x11");
+			}
 			newKem.start();
 		} catch (Exception ex) {
 			ex.printStackTrace();
@@ -1309,8 +1142,8 @@ public class Emulator implements Runnable {
 		try {
 			File file = new File(jadPath);
 			if (file.exists()) {
-				if (jadPath.endsWith(".jam")) {
-					return jadPath.substring(0, jadPath.length() - 1) + 'r';
+				if (jadPath.toLowerCase().endsWith(".jam")) {
+					return jadPath.substring(0, jadPath.length() - 3) + "jar";
 				}
 				Properties properties = new Properties();
 				properties.load(new InputStreamReader(new FileInputStream(file), StandardCharsets.UTF_8));
@@ -1328,12 +1161,9 @@ public class Emulator implements Runnable {
 		Emulator.customClassLoader = new CustomClassLoader(ClassLoader.getSystemClassLoader());
 		Emulator.jarLibrarys = new Vector();
 		Emulator.jarClasses = new Vector();
-		Emulator.deviceName = "SonyEricssonK800";
-		Emulator.deviceFile = "/res/plat";
 		backgroundThread = new Thread(new Runnable() {
 			public void run() {
-				Manager.checkLibVlcSupport();
-				if (!updated && !Settings.uei && Settings.autoUpdate == 2 && Updater.checkUpdate() == Updater.STATE_UPDATE_AVAILABLE) {
+				if (!updated && !AppSettings.uei && Settings.autoUpdate == 2 && Updater.checkUpdate() == Updater.STATE_UPDATE_AVAILABLE) {
 					if (emulatorimpl instanceof SWTFrontend) {
 						SWTFrontend.getDisplay().asyncExec(() -> getEmulator().getScreen().showUpdateDialog(1));
 					}
@@ -1363,34 +1193,10 @@ public class Emulator implements Runnable {
 		return platform.getGraphics3D();
 	}
 
-	public static int getJavaVersionMajor() {
-		try {
-			return Integer.parseInt(System.getProperty("java.version").split("\\.")[0]);
-		} catch (Throwable e) {
-			return 0;
-		}
-	}
-
-	public static boolean isJava9() {
-		try {
-			return getJavaVersionMajor() >= 9;
-		} catch (Throwable e) {
-			return false;
-		}
-	}
-
-	public static boolean isJava17() {
-		try {
-			return getJavaVersionMajor() >= 17;
-		} catch (Throwable e) {
-			return false;
-		}
-	}
-
 	public void run() {
 		if (!doja) {
 			try {
-				midletClass.newInstance();
+				Emulator.setMIDlet((MIDlet) midletClass.newInstance());
 			} catch (Throwable e) {
 				e.printStackTrace();
 				eventQueue.stop();
